[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 30 )

[sub_resource type="CircleShape2D" id=2]
radius = 50.0

[sub_resource type="CircleShape2D" id=3]
radius = 241.052

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Network_tick_rate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="Attack_delay" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="AttackDistance" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDistance"]
shape = SubResource( 2 )

[node name="PlayerDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource( 3 )

[connection signal="timeout" from="Network_tick_rate" to="." method="_on_Network_tick_rate_timeout"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
